Tob bar alignment fixes

--- a/BlazorSite/Shared/MainLayout.razor.css
+++ b/BlazorSite/Shared/MainLayout.razor.css
@@ -15,6 +15,7 @@
     text-decoration: none;
     font-size: 36px;
     margin-left: 10px;
+    margin-top: 10px;
 }
 
 .main-menu {
@@ -27,8 +28,8 @@
 }
   
 .brand {
-display: flex;
-justify-content: space-between;
-order: 2;
+    display: flex;
+    justify-content: space-between;
+    order: 2;
 }
   
